--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -10,6 +10,14 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
-       android:background="@drawable/spalsh" />
+       android:background="@drawable/spalsh"
+       android:scaleType="centerCrop"/>
+
+   <ImageView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:background="@drawable/splash_txt"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
