--- a/app/src/main/res/drawable/push_checkbox_icon.xml
+++ b/app/src/main/res/drawable/push_checkbox_icon.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:drawable="@drawable/toggle_off"
+    <item android:drawable="@drawable/comp_toggle_off"
         android:state_checked="false"/>
-    <item android:drawable="@drawable/toggle_on"
+    <item android:drawable="@drawable/comp_toggle_on"
         android:state_checked="true"/>
-    <item android:drawable="@drawable/toggle_off"/>
+    <item android:drawable="@drawable/comp_toggle_off"/>
 </selector>
