--- a/app/src/main/res/layout/activity_reservation_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_hotel_detail.xml
@@ -116,7 +116,7 @@
 
                 <ImageView
                     android:id="@+id/iv_img"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="160dp"
                     android:scaleType="fitXY"
                     android:background="@color/holder_c"/>
