--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -3,32 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="213dp"
-    android:layout_marginTop="15dp"
+    android:layout_height="wrap_content"
+    android:gravity="center"
     android:background="@color/white">
 
     <com.hotelnow.utils.ViewPagerCustom
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="15dp"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/pager_count_round"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
         android:textColor="@color/white"
         android:textSize="11dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginBottom="33dp"
+        android:layout_alignParentRight="true"
         android:layout_marginRight="24dp"
+        android:layout_marginTop="178dp"
         tools:text=" 3/10 + "/>
+
 </RelativeLayout>
