--- a/app/src/main/res/layout/layout_detail_facility.xml
+++ b/app/src/main/res/layout/layout_detail_facility.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
     android:layout_marginTop="28dp"
     android:layout_marginBottom="29dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="17dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <com.hotelnow.utils.FlowLayout
@@ -29,9 +30,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            app:elementSpacing="10dp"
+            app:elementSpacing="12dp"
             app:flowDirection="leftToRight"
-            app:lineSpacing="10dp"
+            app:lineSpacing="18dp"
             app:paddingStart="15dp"
             app:paddingEnd="15dp"/>
     </LinearLayout>
