--- a/app/src/main/res/layout/layout_hotel_banner.xml
+++ b/app/src/main/res/layout/layout_hotel_banner.xml
@@ -3,16 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="155dp"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
     <com.hotelnow.utils.ViewPagerCustom
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/page"
@@ -20,14 +17,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/pager_count_round"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
         android:textColor="@color/white"
         android:textSize="11dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="115dp"
         android:layout_marginRight="24dp"
         tools:text=" 3/10 + "/>
 
