--- a/app/src/main/res/layout/layout_hotel_banner_item.xml
+++ b/app/src/main/res/layout/layout_hotel_banner_item.xml
@@ -8,9 +8,7 @@
         android:id="@+id/image_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
         app:riv_corner_radius="5dp"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop"/>
 
 </RelativeLayout>
