--- a/app/src/main/res/layout/layout_theme_speical_item.xml
+++ b/app/src/main/res/layout/layout_theme_speical_item.xml
@@ -36,7 +36,7 @@
 
             <ImageView
                 android:id="@+id/iv_img"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:scaleType="centerCrop"
                 android:background="@color/holder_c"/>
