상세화면 필터

--- a/app/src/main/res/layout/layout_detail_facility.xml
+++ b/app/src/main/res/layout/layout_detail_facility.xml
@@ -24,16 +24,46 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <com.hotelnow.utils.FlowLayout
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <LinearLayout
             android:id="@+id/filter"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"
-            app:elementSpacing="12dp"
-            app:flowDirection="leftToRight"
-            app:lineSpacing="18dp"
-            app:paddingStart="15dp"
-            app:paddingEnd="15dp"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
+        <LinearLayout
+            android:id="@+id/filter7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal"></LinearLayout>
     </LinearLayout>
 </LinearLayout>
