--- a/app/src/main/res/layout/fragment_h_result.xml
+++ b/app/src/main/res/layout/fragment_h_result.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:background="@drawable/style_edittext_gray_border">
         <ImageView
             android:layout_width="15dp"
