--- a/app/src/main/res/layout/layout_reservation_activity_item.xml
+++ b/app/src/main/res/layout/layout_reservation_activity_item.xml
@@ -129,7 +129,7 @@
             android:layout_marginTop="14dp"
             android:layout_marginBottom="14dp"
             android:gravity="center"
-            android:background="@drawable/private_round">
+            android:background="@drawable/review_round">
 
             <TextView
                 android:id="@+id/review_text1"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:layout_marginLeft="6dp"
-                android:textColor="@color/privateview"
+                android:textColor="@color/hotdealview"
                 android:text="@string/info_review"/>
 
             <TextView
