--- a/app/src/main/res/layout/activity_near_map.xml
+++ b/app/src/main/res/layout/activity_near_map.xml
@@ -98,6 +98,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/img_score"
                         android:layout_width="10dp"
                         android:layout_height="10dp"
                         android:layout_marginLeft="16dp"
@@ -115,16 +116,17 @@
                         tools:text="3.3" />
 
                     <TextView
+                        android:id="@+id/line_score"
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
                         android:background="@color/textbar"/>
 
                     <TextView
                         android:id="@+id/tv_catagory"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
                         android:textSize="11dp"
                         android:background="@color/white"
                         android:textColor="@color/blacktxt"
