--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -60,7 +60,7 @@
             <ImageView
                 android:id="@+id/popup_img"
                 android:layout_width="match_parent"
-                android:layout_height="435dp"
+                android:layout_height="wrap_content"
                 android:scaleType="centerCrop"/>
 
         </RelativeLayout>
