--- a/app/src/main/res/layout/layout_reservation_banner_item.xml
+++ b/app/src/main/res/layout/layout_reservation_banner_item.xml
@@ -6,5 +6,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:id="@+id/imageView"/>
+        android:id="@+id/imageView"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
