--- a/app/src/main/res/layout/layout_subbanner_item.xml
+++ b/app/src/main/res/layout/layout_subbanner_item.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_centerInParent="true"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 
 </RelativeLayout>
