--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -203,13 +203,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginRight="5dp"
             android:textColor="@color/privateview"
             android:textSize="14dp"
             android:text="@string/btn_private"
             android:gravity="center"
             android:background="@drawable/private_round"/>
-
+        <View
+            android:id="@+id/line_private"
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
         <TextView
             android:id="@+id/btn_reservation"
             android:layout_width="match_parent"
@@ -217,7 +220,6 @@
             android:layout_weight="1"
             android:textColor="@color/purple"
             android:textSize="14dp"
-            android:layout_marginLeft="5dp"
             android:text="@string/btn_reservation"
             android:gravity="center"
             android:background="@drawable/reservation_round"/>
