--- a/app/src/main/res/layout/activity_activity_detail.xml
+++ b/app/src/main/res/layout/activity_activity_detail.xml
@@ -213,6 +213,16 @@
                     android:orientation="vertical">
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/bg_background"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:background="@color/back_line"/>
+
                 <!--상품자세히 보기넣어야됨-->
                 <include android:id="@+id/img_detail"
                     layout="@layout/layout_detail_activity_product_more" />
@@ -297,11 +307,11 @@
             android:id="@+id/btn_reservation"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/purple"
+            android:background="@drawable/purple_round"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
             android:text="@string/detail_activity_select"
             android:gravity="center"
             android:textColor="@color/white"
