로직 변경 검색

--- a/app/src/main/res/layout/activity_ha_search.xml
+++ b/app/src/main/res/layout/activity_ha_search.xml
@@ -69,14 +69,14 @@
 
     <LinearLayout
         android:id="@+id/btn_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="125dp"
+        android:layout_height="48dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/style_edittext_gray_border">
+        android:background="@drawable/filter_bg">
         <ImageView
             android:layout_width="15dp"
             android:layout_height="16dp"
@@ -90,18 +90,18 @@
             android:layout_marginLeft="7dp"
             android:textColor="@color/termtext"
             android:layout_marginRight="17dp"
-            android:text="필터\u0026정렬"/>
+            android:text="@string/filter_title"/>
     </LinearLayout>
 
     <Button
         android:id="@+id/bt_scroll"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@drawable/btn_screenup"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:background="@drawable/btn_screenup_bg"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="22dp"
         style="?android:attr/borderlessButtonStyle"/>
 
 
