--- a/app/src/main/res/drawable/reservation_private_round.xml
+++ b/app/src/main/res/drawable/reservation_private_round.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="@color/purple" />
-    <stroke android:width="1dp" android:color="@color/purple"/>
+    <solid android:color="@color/privateview" />
+    <stroke android:width="1dp" android:color="@color/privateview"/>
     <corners android:radius="2dp" />
 </shape>
