--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -288,14 +288,14 @@
             android:id="@+id/room_select"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/purple_round"
+            android:background="@drawable/purple_and_white_round"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:text="@string/detail_room_select"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/purple"
             android:textSize="15dp"
             style="?android:attr/borderlessButtonStyle"/>
     </LinearLayout>
