--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -413,9 +413,9 @@
 
     <Button
         android:id="@+id/bt_scroll"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@drawable/btn_screenup"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:background="@drawable/btn_screenup_bg"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
