--- a/app/src/main/res/layout/layout_search_empty.xml
+++ b/app/src/main/res/layout/layout_search_empty.xml
@@ -7,7 +7,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_marginBottom="40dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -67,8 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="30dp">
+                    android:layout_marginTop="15dp">
 
                     <com.hotelnow.utils.FlowLayout
                         xmlns:app="http://schemas.android.com/apk/res-auto"
