--- a/app/src/main/res/layout/activity_hotel_write_review.xml
+++ b/app/src/main/res/layout/activity_hotel_write_review.xml
@@ -151,7 +151,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 서비스 \u0026 친절도"/>
+                    android:text="ㆍ 서비스 &amp; 친절도"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -284,7 +284,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 교통 \u0026 위치"/>
+                    android:text="ㆍ 교통 &amp; 위치"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -352,7 +352,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 시설 \u0026 편의성"/>
+                    android:text="ㆍ 시설 &amp; 편의성"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
