--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -140,7 +140,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="11dp"
                         android:textColor="@color/blacktxt"
-                        android:text="서비스 \u0026 친절도"/>
+                        android:text="서비스 &amp; 친절도"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -201,7 +201,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="교통 \u0026 위치"
+                        android:text="교통 &amp; 위치"
                         android:textSize="11dp"
                         android:textColor="@color/blacktxt"/>
                 </LinearLayout>
@@ -330,7 +330,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="시설 \u0026 편의성"
+                        android:text="시설 &amp; 편의성"
                         android:textSize="11dp"
                         android:textColor="@color/blacktxt"/>
                 </LinearLayout>
