--- a/app/src/main/res/layout/activity_review_show.xml
+++ b/app/src/main/res/layout/activity_review_show.xml
@@ -123,7 +123,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 서비스 \u0026 친절도"/>
+                    android:text="ㆍ 서비스 &amp; 친절도"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -257,7 +257,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 교통 \u0026 위치"/>
+                    android:text="ㆍ 교통 &amp; 위치"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -325,7 +325,7 @@
                     android:layout_weight="1"
                     android:textSize="14dp"
                     android:textColor="@color/blacktxt"
-                    android:text="ㆍ 시설 \u0026 편의성"/>
+                    android:text="ㆍ 시설 &amp; 편의성"/>
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
