--- a/app/src/main/res/layout/fragment_h_result.xml
+++ b/app/src/main/res/layout/fragment_h_result.xml
@@ -13,6 +13,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/h_filter"
         android:layout_width="match_parent"
         android:layout_height="53dp"
         android:layout_alignParentBottom="true"
