--- a/app/src/main/res/layout/layout_detail_review_item.xml
+++ b/app/src/main/res/layout/layout_detail_review_item.xml
@@ -128,6 +128,7 @@
                 android:text=" "
                 android:textColor="@color/blacktxt"
                 android:layout_marginLeft="8dp"
+                android:layout_marginRight="12dp"
                 android:textSize="13dp" />
 
         </LinearLayout>
