추천이유, 찜 엑티비티, 상세페이지 타이틀 수정

--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -136,7 +136,8 @@
                         android:singleLine="true"
                         android:textSize="16dp"
                         android:maxLines="1"
-                        android:gravity="center"
+                        android:gravity="left|center_vertical"
+                        android:layout_marginLeft="10dp"
                         android:ellipsize="end"
                         tools:text="xxxxxxxxxxxxxx"/>
 
