관심상품 삭제전 팝업 적용, 테마 상세 리스트 새로고침 제거, 검색 필터 적용없을시 비노출

--- a/app/src/main/res/layout/activity_special_themehotel.xml
+++ b/app/src/main/res/layout/activity_special_themehotel.xml
@@ -52,10 +52,10 @@
         android:background="@color/white">
 
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <!--<android.support.v4.widget.SwipeRefreshLayout-->
+            <!--android:id="@+id/swipe"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent">-->
 
             <ListView
                 android:id="@+id/listview"
@@ -67,7 +67,7 @@
                 android:fadeScrollbars="true">
             </ListView>
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+        <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
     </LinearLayout>
 
