--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -109,13 +109,19 @@
                 android:layout_marginRight="20dp"
                 android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/phone_num_1"
+                <LinearLayout
                     android:layout_width="50dp"
                     android:layout_height="46dp"
-                    android:layout_weight="1"
-                    android:textSize="15dp"
-                    android:spinnerMode="dropdown" />
+                    android:layout_weight="0.7"
+                    android:background="@drawable/comp_selectbox_l">
+                    <Spinner
+                        android:id="@+id/phone_num_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:background="@android:color/transparent"
+                        android:spinnerMode="dropdown" />
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/phone_num_2"
