딜 상세 즉시할인 적용, 딜상세 상단 롤링페이지 고정으로 수정

--- a/app/src/main/res/layout/layout_detail_activity.xml
+++ b/app/src/main/res/layout/layout_detail_activity.xml
@@ -111,6 +111,14 @@
                 android:scaleType="fitXY"
                 android:visibility="gone"
                 android:background="@drawable/tag_benefit_point" />
+
+            <ImageView
+                android:id="@+id/ico_nowdiscount"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:background="@drawable/tag_benefit_discount" />
         </LinearLayout>
 
         <RelativeLayout
