--- a/app/src/main/res/layout/layout_detail_hotel.xml
+++ b/app/src/main/res/layout/layout_detail_hotel.xml
@@ -115,11 +115,19 @@
 
             <ImageView
                 android:id="@+id/ico_addpoint"
-                android:layout_width="49dp"
+                android:layout_width="50dp"
                 android:layout_height="20dp"
                 android:scaleType="fitXY"
                 android:visibility="gone"
                 android:background="@drawable/tag_benefit_point" />
+
+            <ImageView
+                android:id="@+id/ico_nowdiscount"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:background="@drawable/tag_benefit_discount" />
         </LinearLayout>
 
         <RelativeLayout
