--- a/app/src/main/res/layout/activity_activity_detail.xml
+++ b/app/src/main/res/layout/activity_activity_detail.xml
@@ -26,50 +26,56 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="@android:color/transparent">
 
-            <com.hotelnow.utils.ToughViewPager
-                android:id="@+id/img_pager"
-                android:layout_width="match_parent"
-                android:layout_height="234dp"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                android:background="@color/white"
-                app:layout_collapseMode="pin"/>
-
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:gravity="center_vertical"
-                android:layout_marginRight="28dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginBottom="19dp">
+                android:layout_height="match_parent"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="1">
 
-                <TextView
-                    android:id="@+id/img_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/pager_count_round"
-                    android:textSize="11dp"
-                    android:maxWidth="150dp"
-                    android:singleLine="true"
-                    android:padding="5dp"
-                    android:ellipsize="end"
-                    android:textColor="@color/white"
-                    tools:text="외관사진"/>
+                <com.hotelnow.utils.ToughViewPager
+                    android:id="@+id/img_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    android:background="@color/white" />
 
-                <TextView
-                    android:id="@+id/page"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/pager_count_round"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/white"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:textSize="11dp"
-                    tools:text=" 3/10 + "/>
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="28dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginBottom="45dp">
+
+                    <TextView
+                        android:id="@+id/img_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/pager_count_round"
+                        android:textSize="11dp"
+                        android:maxWidth="150dp"
+                        android:singleLine="true"
+                        android:padding="5dp"
+                        android:ellipsize="end"
+                        android:textColor="@color/white"
+                        tools:text="외관사진"/>
+
+                    <TextView
+                        android:id="@+id/page"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/pager_count_round"
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/white"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:textSize="11dp"
+                        tools:text=" 3/10 + "/>
+                </RelativeLayout>
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
