top 빠진부분 적용, 숙소 엑티비티 탭에서 검색시 지도 변경

--- a/app/src/main/res/layout/activity_near_map.xml
+++ b/app/src/main/res/layout/activity_near_map.xml
@@ -37,6 +37,7 @@
             android:maxLines="1"
             android:textSize="16dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/purple"
             android:gravity="left|center"
             android:ellipsize="end"
