--- a/app/src/main/res/layout/activity_all_stheme.xml
+++ b/app/src/main/res/layout/activity_all_stheme.xml
@@ -82,6 +82,18 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/bt_scroll"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:visibility="gone"
+        android:background="@drawable/btn_screenup_bg"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="22dp"
+        style="?android:attr/borderlessButtonStyle"/>
+
     <RelativeLayout
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
