주변호텔보기 시 스텝 쌓이게, 추천이유없을시 비노출

--- a/app/src/main/res/layout/layout_detail_recommend.xml
+++ b/app/src/main/res/layout/layout_detail_recommend.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/footerview">
+    android:background="@color/footerview"
+    android:id="@+id/layout_recommend">
 
     <TextView
         android:layout_width="match_parent"
