--- a/app/src/main/res/layout/fragment_pager_main.xml
+++ b/app/src/main/res/layout/fragment_pager_main.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal"
-        android:background="@color/white">
+        android:background="@drawable/white_bottom_round">
 
         <CheckBox
             android:id="@+id/left"
