포커스 없을때 에러 수정, qa수정사항 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:layout_below="@+id/toolbar"
+        android:scrollbars="none"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp">
 
