예약 시 아이디값 체크 부분 수정

--- a/app/src/main/res/layout/dialog_full.xml
+++ b/app/src/main/res/layout/dialog_full.xml
@@ -152,7 +152,7 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="현재위치 기준 숙소 거리순 정렬"
+                                android:text="내주변 바로보기, 숙소 거리순 정렬"
                                 android:textSize="15dp"
                                 android:layout_marginTop="6dp"
                                 android:textColor="@color/termtext" />
