메인 탭 수정, 홀더 이미지 수정

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:elevation="0dp">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/toolbar"
@@ -44,8 +45,12 @@
                 app:tabTextColor="@color/unselecttab"
                 app:tabSelectedTextColor="@color/purple"
                 app:tabIndicatorColor="@color/purple"
-                app:tabMode="fixed"
-                android:elevation="0dp"/>
+                app:tabMode="fixed" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/back_line"/>
 
         </android.support.design.widget.AppBarLayout>
 
