--- a/app/src/main/res/layout/layout_recent_item.xml
+++ b/app/src/main/res/layout/layout_recent_item.xml
@@ -14,6 +14,12 @@
         android:layout_height="wrap_content">
 
         <com.makeramen.roundedimageview.RoundedImageView
+            android:layout_width="270dp"
+            android:layout_height="150dp"
+            app:riv_corner_radius="2dp"
+            android:background="@drawable/img_holder"/>
+
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_image"
             android:layout_width="270dp"
             android:layout_height="150dp"
