회원 가입시 비밀번호 20자, 로그인시 20자, 객실 혹은 액티비티 count 숫자 패턴 적용, 핸드폰 결제시 통신사 삭제

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,6 +71,7 @@
                     android:textColorHint="@color/coupon_dis"
                     android:inputType="textPassword"
                     android:textSize="17dp"
+                    android:maxLength="20"
                     android:theme="@style/EditTheme"
                     android:textColor="@color/blacktxt" />
 
