프라이빗딜 버튼 수정, 쿠폰 딥링크일때 마이페이지로 이동, 테마의 notice적용, 검색시 item없을때 빈영역 숨김,

--- a/app/src/main/res/layout/activity_special_themehotel.xml
+++ b/app/src/main/res/layout/activity_special_themehotel.xml
@@ -64,7 +64,8 @@
                 android:dividerHeight="0dp"
                 android:background="@color/white"
                 android:divider="#000000"
-                android:fadeScrollbars="true">
+                android:fadeScrollbars="true"
+                android:listSelector="@android:color/transparent">
             </ListView>
 
         <!--</android.support.v4.widget.SwipeRefreshLayout>-->
