--- a/app/src/main/res/layout/activity_review_hotel.xml
+++ b/app/src/main/res/layout/activity_review_hotel.xml
@@ -267,6 +267,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1">
                     <TextView
+                        android:id="@+id/tv_checktitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="청결도"
