--- a/app/src/main/res/layout/layout_reservation_login.xml
+++ b/app/src/main/res/layout/layout_reservation_login.xml
@@ -28,7 +28,7 @@
             android:id="@+id/tv_info1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="로그인이 필요한 메뉴입니다"
+            android:text="로그인 후 이용이 가능한 메뉴입니다"
             android:gravity="center"
             android:textColor="@color/termtext"
             android:textSize="15dp"/>
